entity module code changes

--- a/h-charity-ui/src/app/modules/entity/components/entity-bank-details/entity-bank-details.component.html
+++ b/h-charity-ui/src/app/modules/entity/components/entity-bank-details/entity-bank-details.component.html
@@ -71,6 +71,8 @@
         >
           <button
             pButton
+            type="button"
+            (click)="onReset()"
             pRipple
             label="Reset"
             icon="pi pi-fw pi-refresh"
