--- a/h-charity-ui/src/app/modules/auth/components/register/register.component.html
+++ b/h-charity-ui/src/app/modules/auth/components/register/register.component.html
@@ -1,3 +1,129 @@
-<p>
-  register works!
-</p>
+<div
+  class="surface-ground flex align-items-center justify-content-center overflow-hidden"
+>
+  <div class="flex flex-column align-items-center justify-content-center">
+    <img
+      src="assets/{{
+        layoutService.config().colorScheme === 'light' ? 'logo' : 'logo-white'
+      }}.png"
+      alt="h-charity-ui logo"
+      class="mb-5 w-6rem flex-shrink-0"
+    />
+    <div
+      style="
+        border-radius: 56px;
+        padding: 0.3rem;
+        background: linear-gradient(
+          180deg,
+          var(--primary-color) 10%,
+          rgba(33, 150, 243, 0) 30%
+        );
+      "
+    >
+      <div
+        class="w-full surface-card py-8 px-5 sm:px-8"
+        style="border-radius: 53px"
+      >
+        <div class="text-center mb-5">
+          <div class="text-900 text-3xl font-medium mb-3">Register!</div>
+          <span class="text-600 font-medium">Let's get started</span>
+        </div>
+
+        <form [formGroup]="registrationForm" (ngSubmit)="register()">
+          <div class="flex flex-column gap-2">
+            <label for="username" class="block text-900 text-xl font-medium"
+              >Username</label
+            >
+            <input
+              id="username"
+              type="text"
+              formControlName="username"
+              placeholder="Username"
+              pInputText
+              class="w-full md:w-30rem"
+              style="padding: 1rem"
+            />
+
+            <small
+              *ngIf="username.invalid && (username.dirty || username.touched)"
+              id="username-help"
+              class="mb-5 error-color"
+            >
+              Username is required and must be at least 3 characters long
+            </small>
+
+            <label for="email" class="block text-900 text-xl font-medium"
+              >Email</label
+            >
+            <input
+              id="email"
+              type="text"
+              formControlName="email"
+              placeholder="Email"
+              pInputText
+              class="w-full md:w-30rem"
+              style="padding: 1rem"
+            />
+            <small
+              *ngIf="email.invalid && (email.dirty || email.touched)"
+              id="email-help"
+              class="mb-5 error-color"
+            >
+              Enter a valid email address
+            </small>
+
+            <label for="password1" class="block text-900 font-medium text-xl"
+              >Password</label
+            >
+            <p-password
+              id="password"
+              formControlName="password"
+              placeholder="Password"
+              [toggleMask]="true"
+              inputStyleClass="w-full p-3 md:w-30rem"
+            ></p-password>
+            <small
+              *ngIf="password.invalid && (password.dirty || password.touched)"
+              id="password-help"
+              class="mb-5 error-color"
+            >
+              Password is required and must be at least 6 characters long
+            </small>
+
+            <div
+              class="flex align-items-center justify-content-between mb-5 gap-5"
+            >
+              <div class="flex align-items-center">
+                <p-checkbox
+                  id="rememberme"
+                  [binary]="true"
+                  styleClass="mr-2"
+                  formControlName="rememberme"
+                ></p-checkbox>
+                <label for="termsAndConditions"
+                  >I have read the
+                  <a
+                    class="font-medium no-underline ml-2 text-right cursor-pointer"
+                    style="color: var(--primary-color)"
+                    >Terms and Conditions</a
+                  ></label
+                >
+              </div>
+              <a
+                class="font-medium no-underline ml-2 text-right cursor-pointer"
+                style="color: var(--primary-color)"
+                >Forgot password?</a
+              >
+            </div>
+            <button
+              pButton
+              pRipple
+              label="Sign Up"
+              class="w-full p-3 text-xl"
+            ></button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
