--- a/h-charity-ui/src/app/modules/entity/components/entity-view/entity-view.component.html
+++ b/h-charity-ui/src/app/modules/entity/components/entity-view/entity-view.component.html
@@ -75,6 +75,7 @@
     </div>
     <div class="col-12 md:col-6 lg:col-6">
       <img
+        *ngIf="entity && entity.entityPhotos.qrCode"
         src="{{ entity && entity.entityPhotos.qrCode }}"
         alt="qrcode"
         height="273px"
