--- a/h-charity-ui/src/app/modules/entity/components/entity-view/entity-view.component.css
+++ b/h-charity-ui/src/app/modules/entity/components/entity-view/entity-view.component.css
@@ -21,17 +21,15 @@
 }
 
 
-.date-time {
-    position: fixed;
-    top: 200px;
-    /* Adjust the top position as needed */
-    right: 60px;
-    /* Adjust the right position as needed */
-    background-color: #fdfbfb;
-    padding: 10px;
-    border: 1px solid #4c66e7;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+.time {
+    font-size: 3em;
+    font-weight: bold;
+    margin-top: 0;
+    text-align: end;
+}
+
+.date {
+    text-align: end;
 }
 
 #map {
@@ -150,4 +148,30 @@
     padding: 4px 8px;
     border-radius: 4px;
     background-color: #eee;
+}
+
+
+.text-center {
+    text-align: center;
+}
+
+h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+h3 {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+p-table {
+    width: 100%;
+}
+
+th,
+td {
+    padding: 0.75rem;
+    text-align: left;
 }
