--- a/h-charity-ui/src/assets/layout/styles/theme/lara-light-indigo/theme.css
+++ b/h-charity-ui/src/assets/layout/styles/theme/lara-light-indigo/theme.css
@@ -65,7 +65,7 @@
   font-display: swap;
   font-style: italic;
   font-named-instance: 'Italic';
-  src: url('./fonts/Inter-italic.var.woff2?v=3.19') format('woff2');
+  /* src: url('./fonts/Inter-italic.var.woff2?v=3.19') format('woff2'); */
 }
 :root {
   --blue-50: #f5f9ff;
